[package]
name = "mosalloc-rs"
version = "0.1.0"
authors = ["Stratos Psomadakis <774566+psomas@users.noreply.github.com>"]
description = """
Mosalloc Rust implementation.
"""
edition = "2021"

[lib]
name = "mosalloc"

[workspace]
members = ["src/libmosalloc"]

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
csv = "1.1.6"
lazy_static = "1.4.0"
nix = "0.24.2"
regex = "1.6.0"
serde = { version = "1.0.143", features = ["derive"] }
